[project]
name = "url-shortener-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aws-lambda-powertools>=3.24.0",
    "aws-lambda-typing>=2.20.0",
    "bcrypt>=5.0.0",
    "boto3>=1.42.32",
    "boto3-stubs~=1.42.32",
    "cuid>=0.4",
    "hashids>=1.3.1",
    "mypy-boto3-dynamodb>=1.42.3",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.10.1",
    "pyrefly>=0.49.0",
    "redis>=7.1.0",
]

[dependency-groups]
dev = [
    "mypy-boto3>=1.42.3",
]
